2025-04-18  Charlie Zender  <zender@uci.edu>

	* NCO 5.3.4-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.4-alpha02: Hypr Paddle';git push
	git tag -a 5.3.4-alpha02 -m 'ncks: map chk trbilin fix, brk sng	att prn; ncremap: nfr XY crd';git push --tags

	* NCO_rgr.pl: Add ncrename #32 to check that NC_STRING history attribute appending works

	* ncks break CDL NC_STRING attributes at every '\n' like NC_CHAR attributes nco_prn.c

2025-04-17  Charlie Zender  <zender@uci.edu>

	* ncks squelch map-checker false-positive frac_a/b WARNINGs on TR bilinear maps

2025-04-09  Charlie Zender  <zender@uci.edu>

	* Add X,Y as lon, lat dimensions in ncremap database (solves Nir Krakauer's issue)

	* NCO 5.3.4-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.4-alpha01: Severence';git push
	git tag -a 5.3.4-alpha01 -m 'Functionally identical to 5.3.3 except ENABLE_LOGGING, !mnt_chk bnd';git push --tags

	* ncrcat: Do not perform monotonicity checks on bounds variables (they are never monotonic)

2025-03-29  Charlie Zender  <zender@uci.edu>

	* all: Implement ENABLE_LOGGING in configure.ac

2025-03-28  Charlie Zender  <zender@uci.edu>

	* NCO 5.3.3 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.3: Sea Shanty';git push
	git tag -a 5.3.3 -m 'all: qnt ngt zro NaN; ncks: --fpe, ngl rsn chk map, s1d frc_column frc_landunit attribute fix; ncclimo: rgn_stt uses --lst_hrz; ncremap: fix prs->hyb w/fat tpl; ncrename: WARN crd/dmn netCDF4';git push --tags

	* Acceptance tests pass again on Perlmutter after switching from private to Conda-Forge UDUnits

	* Document ncra -Y --prg_nm --pseudonym

2025-03-27  Charlie Zender  <zender@uci.edu>

	* Add nCells, Time to allowed horizontal dimensions in ncks --lst_hrz

	* ncks --lst_hrz seems to work in ncclimo

	* Add stubs for ncks --lst_hrz, nco_xtr_hrz_lst() customized for ncap2 splitter

2025-03-21  Charlie Zender  <zender@uci.edu>
