@@ -2503,12 +2503,12 @@ nco_inq_varname(const int nc_id,const int var_id,char * const var_nm)
   if(rcd == NC_ENOTVAR){
     char *path=NULL;
     size_t pathlen;
-    rcd=nc_inq_path(nc_id,&pathlen,NULL);
+    nc_inq_path(nc_id,&pathlen,NULL);
     path=(char *)malloc(pathlen*sizeof(char));
-    rcd=nc_inq_path(nc_id,NULL,path);
+    nc_inq_path(nc_id,NULL,path);
     (void)fprintf(stdout,"ERROR: %s reports specified dataset %s has no variable ID %d\n",fnc_nm,path,var_id);
     if(path) free(path);
-  } /* endif */
+  } /* !rcd */
   if(rcd != NC_NOERR) nco_err_exit(rcd,"nco_inq_varname()");
   return rcd;
 } /* !nco_inq_varname */
